--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
   <body>
     <select class="breed-select hide_show"></select>
     <p class="loader">Loading data, please wait...</p>
-    <p class="error hide_show">
+    <!-- <p class="error hide_show">
       Oops! Something went wrong! Try reloading the page!
-    </p>
+    </p> -->
     <div class="cat-info"></div>
 
     <script src="./js/index.js" type="module"></script>
